--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas==2.0.0
-plotly==5.0.0
-dash==2.8.0
-dash-bootstrap-components==1.5.2
-dash-bootstrap-templates==0.1.8
-matplotlib==3.7.1
-seaborn==0.12.2
-ipython==8.10.0
-numpy==1.24.1
+pandas
+plotly
+dash
+dash-bootstrap-components
+dash-bootstrap-templates
+matplotlib
+seaborn
+ipython
+numpy
