Codigo Inicio Fig02

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.analysis.autoImportCompletions": false,
+    "python.analysis.autoImportCompletions": true,
     "python.analysis.typeCheckingMode": "standard",
     "code-runner.clearPreviousOutput": true, // Clears terminal output for Code Runner
     "terminal.integrated.clearBeforeRun": true // Custom setting to clear before running
